# scrapy-rebrowser

./: pyproject.toml  setup.py  tox.ini
rebrowser-playwright/: README.md  pyproject.toml  setup.py
scrapy_playwright/: handler.py
