[build-system]
requires = ["setuptools==75.5.0", "setuptools-scm==8.1.0", "wheel==0.45.0", "auditwheel==6.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rebrowser_playwright"
version = "1.49.0"
description = "A high-level API to automate web browsers"
authors = [
    {name = "Microsoft Corporation"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "greenlet==3.1.1",
    "pyee==12.0.0",
]
classifiers = [
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/rebrowser/rebrowser-playwright-python"
"Release notes" = "https://github.com/rebrowser/rebrowser-playwright-python/releases"

[project.scripts]
rebrowser_playwright = "rebrowser_playwright.__main__:main"

[project.entry-points.pyinstaller40]
hook-dirs = "rebrowser_playwright._impl.__pyinstaller:get_hook_dirs"

[tool.setuptools]
packages = [
    "rebrowser_playwright",
    "rebrowser_playwright.async_api",
    "rebrowser_playwright.sync_api",
    "rebrowser_playwright._impl",
    "rebrowser_playwright._impl.__pyinstaller",
]
include-package-data = true

[tool.pytest.ini_options]
addopts = "-Wall -rsx -vv -s"
markers = [
    "skip_browser",
    "only_browser",
    "skip_platform",
    "only_platform"
]
junit_family = "xunit2"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.mypy]
ignore_missing_imports = true
python_version = "3.9"
warn_unused_ignores = false
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = false
exclude = [
    "build/",
    "env/",
]

[tool.isort]
profile = "black"

[tool.pyright]
include = ["playwright", "tests", "scripts"]
exclude = ["**/node_modules", "**/__pycache__", "**/.*", "./build"]
pythonVersion = "3.9"
reportMissingImports = false
reportTypedDictNotRequiredAccess = false
reportCallInDefaultInitializer = true
reportOptionalSubscript = false
reportUnboundVariable = false
strictParameterNoneValue = false
reportIncompatibleVariableOverride = false
